--- a/Static/Css/variable.css
+++ b/Static/Css/variable.css
@@ -14,8 +14,9 @@
     --orange: #ffc107;
     --blue: #016bf8;
     --gray: #707070;
+    --gray2: #a39e9ec3;
     --dark: #1b2023;
-    --secondary-hover: #173846;
+    --secondary-hover: #193b4a;
     --white: #fff;
     --white-off: #F0F3F2;
     --border-color: #ededed;
