--- a/Static/Css/pages/home.css
+++ b/Static/Css/pages/home.css
@@ -1419,7 +1419,29 @@ footer .footer-pages .footer-head::after {
 
 
 
+.how-to-order .my-grid-md-2:last-child {}
 
+.how-to-order .my-card {
+    padding: 40px 25px;
+    background-color: var(--border-color);
+    border-radius: 0;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.how-to-order .my-card .sl {
+    color: var(--white);
+    padding: 12px 18px;
+    border-radius: 4px;
+    background-color: var(--primary-color);
+    width: fit-content;
+    font-weight: var(--fw-700);
+    font-size: var(--fs-xl);
+}
+
+.how-to-order .my-card p {
+    font-size: var(--fs-md);
+}
 
 
 
