--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -894,6 +894,9 @@ input[type="radio"]:checked::after {
 }
 
 
+.section-head {
+    text-align: center;
+}
 
 .section-head p {
     position: relative;
@@ -909,4 +912,185 @@ input[type="radio"]:checked::after {
     width: 60px;
     height: 2px;
     transform: translate(-50%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*________________________________*\
+  ||     Paroduct Cart  Here      ||
+\*________________________________*/
+.product-cart {
+    max-width: 400px;
+    border-color: var(--border-color2);
+}
+
+
+/*****  images  *****/
+.product-cart .images {
+    width: 100%;
+    height: 200px;
+    position: relative;
+    /* overflow: hidden; */
+}
+
+.product-cart .images img {
+    width: 200px;
+    margin: 0 auto;
+}
+
+.product-cart .images .hide-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0%;
+    z-index: -2;
+    transform: scale(0);
+    transition: .6s;
+}
+
+.product-cart:hover .display-image {
+    z-index: -1;
+}
+
+.product-cart:hover .hide-image {
+    top: 0;
+    z-index: 2;
+    transform: scale(.95);
+}
+
+/*****  rating  *****/
+.product-cart .rating i {
+    margin-left: -4px;
+    color: var(--primary-color);
+}
+
+.product-cart .stars:hover i {
+    color: var(--primary-hover-color);
+}
+
+.product-cart .avg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 18px;
+    color: var(--white-off);
+    background-color: var(--primary-hover-color);
+    border-radius: 2px;
+    font-size: 13px;
+}
+
+
+/*****  Price  *****/
+.product-cart .new-price {
+    font-size: var(--fs-lg);
+}
+
+.product-cart .name h4 {
+    transition: .2s;
+}
+
+.product-cart .description {
+    height: 22px;
+    overflow: hidden;
+    font-size: 13px;
+}
+
+.product-cart .name:hover h4 {
+    color: var(--primary-color);
+}
+
+
+/*****  sold available  *****/
+.product-cart .sold-available .available-range {
+    margin-top: 5px;
+    height: 8px;
+    width: 100%;
+    background-color: var(--border-color);
+    border-radius: 14px;
+    position: relative;
+}
+
+.product-cart .sold-available .available-range::before {
+    position: absolute;
+    content: '';
+    top: 2px;
+    left: 3px;
+    height: 3px;
+    width: 20%;
+    background: var(--border-color2);
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+
+
+
+/***** Base  *****/
+.base {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    padding: 1px 5px;
+    font-size: 12px;
+    background-color: var(--primary-color);
+    text-transform: lowercase;
+    color: var(--white);
+    transition: .2s linear;
+}
+
+.product-cart .base {
+    animation: base-animation 4s linear infinite;
+}
+
+.product-cart .base.new {
+    animation: unset;
+    left: 0;
+    right: unset;
+    background-color: var(--secondary-color);
+}
+
+
+
+/*****  Hide icons  *****/
+.product-cart .hide-icons {
+    position: absolute;
+    left: 50%;
+    bottom: -30px;
+    z-index: 6;
+    padding: 10px;
+    transform: translateX(-50%);
+    visibility: hidden;
+    opacity: 0;
+    transition: .7s;
+    transition-delay: .6s;
+}
+
+.product-cart .hide-icon {
+    background-color: var(--primary-hover-color);
+    box-shadow: var(--shadow-3);
+    width: 39px;
+    height: 36px;
+    border-radius: 6px;
+    transition: .25s;
+    color: var(--white);
+}
+
+.product-cart .hide-icon:hover {
+    background-color: var(--secondary-hover);
+}
+
+.product-cart:hover .hide-icons {
+    bottom: -5px;
+    visibility: visible;
+    opacity: 1;
 }
