--- a/Static/Css/pages/home.css
+++ b/Static/Css/pages/home.css
@@ -1537,7 +1537,7 @@ footer .footer-pages .footer-head::after {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 40px;
-    height: 2000px;
+    max-width: 4000px;
 }
 
 .products-area .left {
@@ -1548,6 +1548,7 @@ footer .footer-pages .footer-head::after {
     position: sticky;
     top: 40px;
     left: 0;
+    width: 250px;
 }
 
 .products-area .sticky .my-card {
@@ -1947,6 +1948,28 @@ footer .footer-pages .footer-head::after {
 
     .subcibe-discount-area .right img {
         max-width: 240px;
+    }
+
+
+
+    /*********  Product Area  ********/
+    .products-area {
+        grid-template-columns: 1fr;
+        /* margin: 0 auto;
+        align-items: center;
+        justify-content: center; */
+        background-color: red;
+    }
+
+    .products-area .left {
+        margin: 0 auto;
+    }
+
+    .popular-products-area {
+        justify-content: center;
+        align-items: center !important;
+        margin: 0 auto;
+        background-color: black;
     }
 }
 
