some issue fixed

--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -49,6 +49,7 @@ h2 {
 
 h3 {
     font-size: var(--fs-xl);
+    line-height: 26px;
 }
 
 h4 {
@@ -75,10 +76,12 @@ a {
     color: inherit;
     transition: color .1s linear;
     user-select: none;
+    font-size: inherit !important;
 }
 
 button {
     user-select: none;
+    font-family: var(--font-montserrat);
 }
 
 button:active,
@@ -138,10 +141,24 @@ button {
     font-size: inherit;
     word-spacing: 3px;
     transition: .2s ease-in-out;
-    font-family: var(--font-inter);
+    font-family: var(--font-montserrat);
 }
 
 
+
+table {
+    border-collapse: collapse;
+}
+
+table td,
+th {
+    min-width: 75px;
+    padding: 4px;
+}
+
+tr {
+    padding: 2px;
+}
 
 
 
