--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -304,10 +304,10 @@
 }
 
 .my-input-control input {
-    padding: 9px 14px;
+    padding: 12px 14px;
     border: 1px solid var(--border-color);
     outline: none;
-    border-radius: 4px;
+    border-radius: 8px;
     transition: .15s linear;
     font-family: var(--font-inter);
     max-width: 540px;
@@ -901,6 +901,7 @@ input[type="radio"]:checked::after {
 .section-head p {
     position: relative;
     color: var(--gray);
+    margin-top: -10px;
 }
 
 .section-head p::after {
